chnage to website

--- a/index.html
+++ b/index.html
@@ -1,18 +1,106 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Madhulika Maddipudi</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background-color: #4a90e2;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav {
+      background-color: #2c3e50;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    footer {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+    h2 {
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 0.5rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hi, I'm Madhulika 👋</h1>
-  <p>Welcome to my personal site! I’m a QA Engineer passionate about quality, automation, and building cool stuff.</p>
-  <ul>
-    <li><a href="https://linkedin.com/in/madhulikam">LinkedIn</a></li>
-    <li><a href="mailto:maddipudimadhulika@gmail.com">Email</a></li>
-  </ul>
+  <header>
+    <h1>Madhulika Maddipudi</h1>
+    <p>QA Engineer | Automation Enthusiast | Problem Solver</p>
+  </header>
+
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#experience">Experience</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="home">
+    <h2>Home</h2>
+    <p>Welcome to my professional portfolio! I specialize in quality assurance, automation, and building robust test strategies across industries.</p>
+  </section>
+
+  <section id="about">
+    <h2>About</h2>
+    <p>I'm Madhulika, a QA Engineer with experience in domains like Banking, E-commerce, Healthcare, Aerospace, and Hardware. My passion lies in ensuring software quality through scalable automation frameworks and deep collaboration with cross-functional teams.</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Automation: Selenium, UIAutomator2, Python, Java</li>
+      <li>Frameworks: Page Object Model, Data Driven</li>
+      <li>CI/CD: Jenkins, GitHub Actions</li>
+      <li>Testing: Manual, Regression, Smoke, Sanity, Accessibility (A11Y)</li>
+      <li>Debugging: PCB-level analysis, Log tracing, Failure analysis</li>
+    </ul>
+  </section>
+
+  <section id="experience">
+    <h2>Experience</h2>
+    <p>Over the years, I've led test planning and automation strategy at multiple companies, driving up automation coverage to 80% and reducing manual test effort by over 60%. I've worked cross-functionally to debug device-level failures and enforce QA best practices from early product development to release.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:maddipudimadhulika@gmail.com">maddipudimadhulika@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/madhulikam" target="_blank">linkedin.com/in/madhulikam</a></p>
+    <p>Location: San Jose, California</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Madhulika Maddipudi. All rights reserved.</p>
+  </footer>
 </body>
 </html>
 
